# epub2vocab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
functions/epub_reader/: CMakeLists.txt
functions/epub_reader/src/: book_text.txt  epub_reader.cpp  epub_reader.hpp  main.cpp
py/: lemmatize_list.py  wordlist_dump.py
src/: main.cpp
src/functions/connect_dictionary/: dictionary_lookup.ipynb
src/functions/connect_dictionary/src/: connect_dictionary.cpp  connect_dictionary.hpp
src/functions/epub_reader/src/: epub_reader.cpp  main.cpp
src/functions/py_runner/include/py_runner/: py_runner.hpp
src/functions/py_runner/src/: py_runner.cpp
src/functions/send_telegram/src/: send_telegram.cpp  send_telegram.hpp
src/functions/word_extractor/: wordlist_dump.py
src/functions/word_extractor/src/: main.cpp  word_extractor.cpp  word_extractor.hpp
